Bug 247242 - after upgrade, DHCP fails with: ip length 576 disagrees with bytes received 574
Summary: after upgrade, DHCP fails with: ip length 576 disagrees with bytes received 574
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Many People
Assignee: Jessica Clarke
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-06-13 21:25 UTC by schaiba
Modified: 2020-06-15 14:28 UTC (History)
2 users (show)

See Also:
koobs: mfc-stable12-
koobs: mfc-stable11-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description schaiba 2020-06-13 21:25:39 UTC
Setup is CURRENT/amd64 running as a Bhyve guest with 12-RELEASE as host. With the previous kernel (FreeBSD current 13.0-CURRENT FreeBSD 13.0-CURRENT #3 r361646: Sat May 30 21:37:35 EEST 2020), DHCP worked just fine, but after upgrading today, I get "ip length 576 disagrees with bytes received 574." messages and the VM gets no IP after a few failed attempts. The reason I believe it's the kernel is the fact that if I use the old kernel with the new userland, everything works. New kernel is FreeBSD 13.0-CURRENT #4 r362149: Sun Jun 14 02:51:50 EEST
Comment 1 commit-hook freebsd_committer freebsd_triage 2020-06-14 22:39:47 UTC
A commit references this bug:

Author: jrtc27
Date: Sun Jun 14 22:39:34 UTC 2020
New revision: 362186
URL: https://svnweb.freebsd.org/changeset/base/362186

Log:
  vtnet: Fix regression introduced in r361944

  For legacy devices that don't support MrgRxBuf (such as bhyve pre-r358180),
  r361944 failed to update the receive handler to account for the additional
  padding introduced by the unused num_buffers field that is now always present
  in struct vtnet_rx_header. Thus, calculate the padding dynamically based on
  vtnet_hdr_size.

  PR:		247242
  Reported by:	thj
  Tested by:	thj

Changes:
  head/sys/dev/virtio/network/if_vtnet.c
Comment 2 Kubilay Kocak freebsd_committer freebsd_triage 2020-06-15 05:22:16 UTC
^Triage: 

 - Assign to committer resolving
 - Appears to be a CURRENT only regression, track MFC flags accordingly
Comment 3 Mark Johnston freebsd_committer freebsd_triage 2020-06-15 14:28:42 UTC
Thanks for the report.